--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
+    "@midudev/tailwind-animations": "^0.2.0",
     "aos": "^2.3.4",
     "vue": "^3.5.13"
   },
