--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@vueuse/motion": "^3.0.3",
     "aos": "^2.3.4",
     "taos": "^1.0.5",
-    "vue": "^3.5.13"
+    "tsparticles": "^3.9.1",
+    "vue": "^3.5.13",
+    "vue3-particles": "^2.12.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
